force-app/main/default/objects/Unplanned_Sample__c/Unplanned_Sample__c.object-meta.xml
<CustomObject>
    <label>Unplanned Sample</label>
    <nameField>
        <displayFormat>US-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unplanned Samples</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>