force-app/main/default/objects/Unplanned_Sample__c/fields/Check_Result__c.field-meta.xml
<CustomField>
    <fullName>Check_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Check Result</label>
    <referenceTo>CheckResult__c</referenceTo>
    <relationshipLabel>Unplanned Samples</relationshipLabel>
    <relationshipName>Unplanned_Samples</relationshipName>
    <type>Lookup</type>
</CustomField>