force-app/main/default/objects/Unplanned_Sample__c/fields/ExternalKey__c.field-meta.xml
<CustomField>
    <fullName>ExternalKey__c</fullName>
    <description>reportId + index</description>
    <externalId>true</externalId>
    <label>ExternalKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>