force-app/main/default/objects/Unplanned_Sample__c/fields/Inspection_Report__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection Report</label>
    <referenceTo>Daily_Inspection_Report__c</referenceTo>
    <relationshipLabel>Unplanned Samples</relationshipLabel>
    <relationshipName>Unplanned_Samples</relationshipName>
    <type>Lookup</type>
</CustomField>