force-app/main/default/objects/Unplanned_Sample__c/fields/Inspection_Type__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Type__c</fullName>
    <label>Inspection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Inspection</fullName>
            </value>
            <value>
                <fullName>Sample Inspection</fullName>
            </value>
            <value>
                <fullName>Event Inspection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>