force-app/main/default/objects/Unplanned_Sample__c/fields/Placement_Status__c.field-meta.xml
<CustomField>
    <fullName>Placement_Status__c</fullName>
    <label>Display Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>展出</fullName>
            </value>
            <value>
                <fullName>未展出</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>