force-app/main/default/objects/Unplanned_Sample__c/fields/Planned_Display__c.field-meta.xml
<CustomField>
    <fullName>Planned_Display__c</fullName>
    <label>Planned Display</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>