force-app/main/default/objects/Unplanned_Sample__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Unplanned Samples</relationshipLabel>
    <relationshipName>Unplanned_Samples</relationshipName>
    <type>Lookup</type>
</CustomField>