force-app/main/default/objects/Unplanned_Sample__c/fields/ReportDate__c.field-meta.xml
<CustomField>
    <fullName>ReportDate__c</fullName>
    <formula>Inspection_Report__r.Report_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Date</label>
    <type>Date</type>
</CustomField>