force-app/main/default/objects/Unplanned_Sample__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SBU__c</columns>
    <columns>Store_Name__c</columns>
    <columns>Inspection_Report__c</columns>
    <columns>ReportDate__c</columns>
    <columns>Product_Model__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>